--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,6 @@
-<a class="nav-link" [routerLink]="['/order']">
+<!-- <a class="nav-link" [routerLink]="['/order']">
     <img src="/assets/images/delivery.png" alt="Description of Image" class="corner-image">
-</a>
+</a> -->
 <app-navbar></app-navbar>
 <router-outlet></router-outlet>
 
