--- a/src/app/components/design-taco/design-taco.component.html
+++ b/src/app/components/design-taco/design-taco.component.html
@@ -4,7 +4,7 @@
     <br/>
     <br/>
     <div class="row">
-      <div class="col-md-3 ps-5 pe-5 custom-top-margin">
+      <div class="col-lg-3 ps-5 pe-5 custom-top-margin">
         <div class="card bg-light custom-shadow card-order">
             <div class="card-body">
                 <h4 class="card-title-custom">Jump to your order by clicking below</h4>
@@ -16,12 +16,12 @@
             <img class="img-fluid img-responsive rounded-circle custom-shadow" src="assets/images/make-taco-jump-to-order.jpg"/>
         </a>
       </div>
-      <div class="col-md-1">
+      <div class="col-lg-1">
 
       </div>
-      <div class="col-md-4 custom-top-margin-main">
+      <div class="col-lg-4 custom-top-margin-main">
         <div class="container mt-4 content-container">
-            <div class="card bg-light">
+            <div class="card bg-light custom-width">
               <div class="card-body">
                   <h4 class="card-title">Design a taco</h4>
               </div>
@@ -51,7 +51,7 @@
               <br/>
               <br/>
               
-              <div class="card bg-light custom-card">
+              <div class="card bg-light custom-card custom-width">
                 <div class="card-body">
                     <h4 class="card-title">Name your taco</h4>
                 </div>
@@ -59,7 +59,7 @@
               <br/>
 
               <br/>
-              <input class="form-control" [(ngModel)]="taco.name">
+              <input class="form-control custom-width" [(ngModel)]="taco.name">
               <br/>
               <br/>
               <button (click)="createTaco()" class="btn btn-primary custom-button">Add your taco to the cart!</button>
@@ -70,10 +70,10 @@
               <br/>
           </div>
         </div>
-        <div class="col-md-1">
+        <div class="col-lg-1">
 
         </div>
-        <div class="col-md-3 custom-top-margin custom-bottom-margin ps-5 pe-5">
+        <div class="col-lg-3 custom-top-margin custom-bottom-margin ps-5 pe-5">
           <div class="card bg-light custom-shadow card-drink">
               <div class="card-body">
                   <h4 class="card-title-custom">Order some drinks by clicking below</h4>
