--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -1,26 +1,13 @@
-<!-- home.component.html -->
 <body>
     <br/>
     <br/>
 
     <div class="container-fluid text-center">
-        <!-- <div class="d-flex justify-content-center align-items-center mt-5 custom-custom">
-            <div class="card text-black mb-3 custom-shadow taco-intro-card" style="max-width: 30rem;">
-              <div class="card-body">
-                <h4 class="card-title">Welcome to Taco Bytes</h4>
-                <p class="card-text">Click below to make your taco! Choose your ingredients and design your perfect taco.</p>
-              </div>
-            </div>
-        </div> -->
-          
-
-        <br/>
-        <br/>
-        <br/>
+        
 
         <div class="container-fluid">
             <div class="row">
-                <div class="col-md-3 custom-top-margin">
+                <div class="col-lg-3 custom-top-margin custom-bottom-margin">
                     <div class="card bg-light custom-shadow card-order">
                         <div class="card-body">
                             <h4 class="card-title-custom">Jump to your order by clicking below</h4>
@@ -32,23 +19,23 @@
                         <img class="img-fluid img-responsive rounded-circle custom-shadow custom-image-secondary" src="assets/images/order-home.jpg"/>
                     </a>
                 </div>
-                <div class="col-md-1"></div>
-                <div class="col-md-4 custom-top-margin-main">
+                <div class="col-lg-1"></div>
+                <div class="col-lg-4 custom-top-margin-main">
                     <div class="card bg-light custom-shadow card-order">
                         <div class="card-body">
-                            <h4 class="">Welcome to Taco Bytes<br>Create your taco by pressing below</h4>
+                            <h4 class="card-title-custom">Welcome to Taco Bytes<br>Create your taco by pressing below</h4>
                         </div>
                     </div>
                     <br/>
                     <br/>
                     <br/>
                     <br/>
-                    <a class="nav-link" [routerLink]="['/design/taco']">
-                        <img class="img-fluid img-responsive rounded-circle custom-shadow custom-image-secondary" src="assets/images/TacoCloud.jpg"/>
+                    <a class="nav-link custtom-bottom-padding" [routerLink]="['/design/taco']">
+                        <img class="img-fluid img-responsive rounded-circle custom-shadow custom-image-secondary " src="assets/images/TacoCloud.jpg"/>
                     </a>
                 </div>
-                <div class="col-md-1"></div>
-                <div class="col-md-3 custom-top-margin custom-bottom-margin">
+                <div class="col-lg-1"></div>
+                <div class="col-lg-3 custom-top-margin custom-bottom-margin">
                     <div class="card bg-light custom-shadow card-drink">
                         <div class="card-body">
                             <h4 class="card-title-custom">Order some drinks by clicking below</h4>
