--- a/src/app/components/drinks/drinks.component.html
+++ b/src/app/components/drinks/drinks.component.html
@@ -3,7 +3,7 @@
   <br/>
   <div class="container">
     <div class="row">
-      <div class="col-md-4" *ngFor="let drink of drinks; index as i">
+      <div class="col-lg-4" *ngFor="let drink of drinks; index as i">
         <div class="card mb-4">
           <img class="card-img-top" [src]="'assets/images/' + drink.associatedPhotoName" alt="Drink image">
           <div class="card-body d-flex flex-column align-items-start justify-content-between">
