--- a/src/app/components/drinks/drinks.component.scss
+++ b/src/app/components/drinks/drinks.component.scss
@@ -7,7 +7,7 @@
 }
 
 .text-container {
-    overflow: hidden; /* Hide overflow */
+    overflow: hidden; 
 }
 
 .card-img-top {
@@ -28,35 +28,35 @@
 }
 
 .card-title, .card-price {
-    white-space: nowrap; /* Keep the text in one line */
-    overflow: hidden; /* Hide the overflow text */
-    text-overflow: ellipsis; /* Add ellipsis at the end of the overflow text */
-    margin-bottom: 4px; /* Add some space between the title and the price */
+    white-space: nowrap;
+    overflow: hidden;
+    text-overflow: ellipsis; 
+    margin-bottom: 4px; 
 }
 
 .add-to-order {
-    align-self: center; /* Center the button in the available space */
-    margin-top: auto; /* Push the button to the bottom of the card-body */
+    align-self: center;
+    margin-top: auto;
     border-radius: 100px;
 }
 
 .col-md-4 {
-    padding: 30px; /* This adds space around the column */
+    padding: 30px; 
 }
 
 .custom-button-taco {
-    width: 1000px;  /* Adjust the width as needed */
-    margin: 0 auto; /* Centers the button horizontally within its container */
-    display: block; /* Makes the button a block element to fill the specified width */
+    width: 1000px; 
+    margin: 0 auto; 
+    display: block; 
     box-shadow: 5px 5px 20px 10px rgba(0,0,0,0.75);
     background: linear-gradient(to right, #f0b30c, rgb(240, 202, 131));
     font-size: 20px;
 }
 
 .custom-button-order {
-    width: 1000px;  /* Adjust the width as needed */
-    margin: 0 auto; /* Centers the button horizontally within its container */
-    display: block; /* Makes the button a block element to fill the specified width */
+    width: 1000px; 
+    margin: 0 auto; 
+    display: block; 
     box-shadow: 5px 5px 20px 10px rgba(0,0,0,0.75);
     background: linear-gradient(to right, #f89a9a, rgb(233, 116, 38));
     font-size: 20px;
