--- a/src/app/components/order/order.component.html
+++ b/src/app/components/order/order.component.html
@@ -2,10 +2,10 @@
 
 <body>
     <div class="row">
-        <div class="col-md-3 ps-5 custom-top-margin">
+        <div class="col-lg-3 ps-5 pe-5 custom-top-margin">
             <div class="card bg-light custom-shadow card-taco">
                 <div class="card-body">
-                    <h4 class="card-title-custom">Add another taco before you finish your order by clicking below</h4>
+                    <h4 class="card-title-custom">Add another taco to your order by pressing below</h4>
                 </div>
             </div>
             <br/>
@@ -15,21 +15,21 @@
             </a>
         </div>
 
-        <div class="col-md-1">
+        <div class="col-lg-1">
     
         </div>
 
-        <div class="order-container col-md-4 mb-5">
+        <div class="order-container col-lg-4 mb-5">
             <br/>
-            <div class="card bg-light">
-            <div class="card-body">
-                <h4 class="card-title">Here are the tacos inside your order</h4>
-            </div>
+            <div class="card bg-light custom-width">
+                <div class="card-body">
+                    <h4 class="card-title">Here are the tacos inside your order</h4>
+                </div>
             </div>
             <br/>
             <ul class = "no-bullets">
                 <li *ngFor="let taco of tacos">
-                    {{ taco.name }} {{ taco.totalTacoPrice}}$
+                    {{ taco.name }} {{ taco.totalTacoPrice | number:'1.1-1' }}$
                     <button class="btn btn-primary delete-btn" (click)="deleteTaco(taco.id)">Exclude</button>
                     <br/><br/>
                 </li>
@@ -53,7 +53,7 @@
             <br/>
             <br/>
 
-            <div class="card bg-light">
+            <div class="card bg-light custom-width">
                 <div class="card-body">
                     <h4 class="card-title">Where should we deliver your taco masterpiece?</h4>
                 </div>
@@ -97,7 +97,7 @@
             <br/>
             <br/>
 
-            <div class="card bg-light">
+            <div class="card bg-light custom-width">
                 <div class="card-body">
                     <h4 class="card-title">Payment Info</h4>
                 </div>
@@ -105,7 +105,7 @@
 
             <br/>
 
-            <div class="payment-info">
+            <div class="payment-info custom-width">
                 <h4 class="payment-title"></h4>
                 <div id="card-number-element" class="form-control"></div>
                 <br/>
@@ -125,11 +125,11 @@
             <br/>
         </div>
 
-        <div class="col-md-1">
+        <div class="col-lg-1">
     
         </div>
 
-        <div class="col-md-3 custom-top-margin ps-5 pe-5 custom-bottom-margin">
+        <div class="col-lg-3 custom-top-margin ps-5 pe-5 custom-bottom-margin">
             <div class="card bg-light custom-shadow card-drink">
                 <div class="card-body">
                     <h4 class="card-title-custom">Add another drink to your order by pressing below</h4>
@@ -138,7 +138,7 @@
             <br/>
             <br/>
             <a class="nav-link" [routerLink]="['/drinks/selection']">
-                <img class="img-fluid img-responsive rounded-circle custom-shadow" src="assets/images/order_transition_drinks.jpg"/>
+                <img class="img-fluid img-responsive rounded-circle custom-shadow fixed-size" src="assets/images/order_transition_drinks.jpg"/>
             </a>
         </div>
     </div>
