--- a/src/app/components/register/register.component.scss
+++ b/src/app/components/register/register.component.scss
@@ -2,8 +2,8 @@ body {
     margin: 0;
     display: flex;
     flex-direction: column;
-    justify-content: flex-start; /* Align items to the top of the viewport */
-    align-items: center; /* Keep horizontal centering */
+    justify-content: flex-start; 
+    align-items: center; 
     color: black;
   }
 
@@ -13,17 +13,17 @@ body {
   }
 
   .register-container {
-    width: 100%; /* Set to the desired width, or keep at 100% for full width */
-    max-width: 600px; /* Increase this value to make the form wider */
-    margin-top: 150px; /* Adjust this value if you want to change the space from the top */
-    padding: 30px; /* Increase padding for a larger overall form */
+    width: 100%; 
+    max-width: 600px; 
+    margin-top: 150px;
+    padding: 30px; 
     text-align: center;
-    font-size: 1.25rem; /* Increase font size for labels and text */
+    font-size: 1.25rem; 
     box-shadow: 20px 20px 30px 10px rgba(0,0,0,0.75);
     border-radius: 100px;
-    display: flex; /* Add flex display */
-    flex-direction: column; /* Stack children vertically */
-    align-items: center; /* Center children horizontally */
+    display: flex; 
+    flex-direction: column; 
+    align-items: center;
     background: linear-gradient(to bottom, rgb(255, 147, 97), #ffffff);
     border-color: rgb(255, 189, 159);
     border-width: 1cm;
@@ -50,24 +50,15 @@ body {
   .card-title-small-text {
     font-size: 10px;
   }
-
-
-
-  // .alert-container {
-  //   width: 100%;
-  //   max-width: 500px; /* Match this to your form's max-width */
-  //   display: flex;
-  //   justify-content: center;
-  // }
   
   .custom-alert {
-    width: 100%; /* Match the width of the form inputs */
-    max-width: 300px; /* Same as the custom-input max-width */
-    margin: 0 auto; /* Center the alert if it's smaller than the max-width */
+    width: 100%; 
+    max-width: 300px; 
+    margin: 0 auto; 
     background: rgb(255, 80, 80);
   }
   
   .custom-input, .custom-alert {
-    align-self: flex-start; /* Override any stretch behavior */
+    align-self: flex-start;
   }
 
